# dsiem-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: code-coverage.yml  conventional-label.yml  pr.yml  publish.yml
configs/: vuln_nessus.json
demo/: .gitignore  get.sh
deployments/docker/: docker-compose-basic-auth.yml  docker-compose-telemetry.yml  docker-compose.yml
deployments/docker/conf/logstash/conf.d/: 99_output.conf
deployments/docker/conf/otel/: collector.yaml
deployments/docker/conf/thanos/: thanos-bucket.yaml
docs/: README.md  adv_deployment.md  building.md  commands.md  directive_and_alarm.md  dsiem_plugin.md  event_flow.md  event_processing.md  faq.md  installation.md  managing_performance.md  security.md  telemetry.md  ti_vuln_plugins.md  web_interfaces.md
fixtures/compose/: docker-compose.yml
fixtures/compose/conf/nesd/csv/: nessus_shellshock.csv
fixtures/compose/conf/wise/etc/: wise.ini
fixtures/configs/: .gitignore
fixtures/configs/assets/: assets_testing.json
fixtures/configs/directives/directive1/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/10/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/11/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/12/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/13/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/14/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/15/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/16/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/17/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/18/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/19/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/2/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/20/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/21/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/22/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/23/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/24/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/25/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/26/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/27/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/28/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/3/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/4/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/5/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/6/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/7/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/8/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive2/9/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive3/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive5/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive6/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive7/: directives_dsiem-backend-0_dir1.json  directives_dsiem-backend-0_dir2.json  directives_dsiem-backend-0_dir3.json  directives_dsiem-backend-0_dir4.json  directives_dsiem-backend-0_dir5.json
fixtures/configs/directives/directive8/: directives_dsiem-backend-0_testing1.json
fixtures/configs/directives/directive9/: directives_dsiem-backend-0_testing1.json
fixtures/configs/dl_config/: .gitignore  assets_testing.json
fixtures/configs/intel_vuln/: intel_wise.json  vuln_nessus.json
scripts/: build-glibc.sh  build-musl.sh  build-web.sh  coverage-dev-task.sh  coverage.sh  css.sh  dockerbuild.sh  gen_lcov_report.sh  kbndashboard-export.sh
scripts/filter-comparison/: Cargo.toml  Readme.md
scripts/filter-comparison/src/: main.rs
scripts/src/: main.rs
server/: Cargo.toml
server/benches/: quick_checks.rs
server/benches/generator/: mod.rs
server/src/: allocator.rs  asset.rs  backlog.rs  cmd_utils.rs  config.rs  directive.rs  eps_limiter.rs  event.rs  filter.rs  intel.rs  lib.rs  log_writer.rs  logger.rs  manager.rs  messenger.rs  meter.rs  parser.rs  rule.rs  server.rs  tracer.rs  utils.rs  vuln.rs  watchdog.rs  worker.rs
server/src/backlog/: loader.rs  manager.rs  mod.rs  optimized_storage.rs  ordered_event_processor.rs  performance_monitor.rs  spawner.rs
server/src/backlog/manager/: option.rs  spawner.rs  storage.rs
server/src/filter/: cache.rs  option.rs
server/src/intel/: wise.rs
server/src/intel/plugins/: mod.rs  wise.rs
server/src/manager/: cache.rs  option.rs
server/src/server/: app_error.rs  validate.rs
server/src/vuln/: nesd.rs
server/src/vuln/plugins/: mod.rs  nesd.rs
server/src/watchdog/: eps.rs
server/tests/: e2e.rs  filter_and_loader.rs  filter_and_manager_spawner.rs
server/tests/generator/: mod.rs
web/: .gitignore  Cargo.toml  Trunk.toml  index.dev.html  index.html  readme.md  tailwind.config.js
web/src/: lib.rs  main.rs
web/src/app/: alarm.rs  home.rs  mod.rs
web/src/components/: alarm.rs  footer.rs  header.rs  mod.rs
web/src/services/: alarm.rs  config.rs  mod.rs
web/tests/: web.rs
