[workspace]
resolver = "2"
members = [
  "server", 
  "web"
]
default-members = [
  "server"
]

[workspace.package]
version = "1.4.0"
authors = ["Dsiem Authors"]
description = "OSSIM-style event correlation engine for ELK stack"
documentation = "https://github.com/defenxor/dsiem/blob/master/docs/README.md"

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
panic = "abort"
lto = true
