[package]
name = "dsiem"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
serde = { version = "1.0.152", features = ["rc"], default-features = false }
serde_json = { version = "1.0.91", default-features = false }
serde_derive = "1.0.152"
glob = "0.3.1"
regex = { version = "1.7.1", features = ["std", "perf"], default-features = false }
cidr = { version = "0.2.1", features = ["serde"] }
tokio = { version = "1.25.0", features = ["sync", "rt-multi-thread"] }
chrono = { version = "0.4.23", features = ["serde", "clock" ], default-features = false }
anyhow = "1.0.68"
nanoid = "0.4.0"
clap = { version = "4.1.4", features = ["help", "std", "derive", "env" ], optional = false, default-features = false}
parking_lot = { version = "0.12.1", features = ["serde"], optional = false, default-features = false }
mini-moka = { version = "0.10.3", features = ["sync"], default-features = false }
quick_cache = "0.4.1"

ip_rfc = "0.1.0"
async-trait = "0.1.64"
metered = { git = "https://github.com/magnet/metered-rs", rev = "3f2d8dc" }
ctrlc = { version = "3.2.5", features = ["termination"] }
reqwest = { version = "0.11.24", features = ["blocking", "rustls-tls"], default-features = false }
async-nats = "0.33.0"
futures-lite = { version = "1.12.0", default-features = false }
crossbeam-channel = "0.5.11"

tracing = { version = "0.1.37", features = [ "attributes" ], default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["json", "ansi"], default-features = false }
tracing-opentelemetry = { version = "0.22.0", default-features = false }
opentelemetry = { version = "0.21.0", default-features = false }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio-current-thread" ], default-features = false }
opentelemetry-otlp =  { version = "0.14.0", features = [ "grpc-tonic", "metrics", "trace" ], default-features = false }

# frontend specific
axum = { version = "0.7.4", features = ["macros", "json", "tokio", "http1" ], default-features = false }
axum-extra = { version = "0.9.2", features = ["erased-json"] }
ratelimit = "0.9.0"
atomic-counter = "1.0.1"
tower-http = { version = "0.5.1", features = ["timeout", "fs" ] , default-features = false }

[dev-dependencies]
table-test = "0.2.1"
rexpect = "0.5.0"
http-body-util = "0.1.0"
tower = "0.4.13"
mockito = "1.2.0"
criterion = "0.5.1"
rand = "0.8.5"
rayon = "1.9.0"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }

[[bench]]
name = "quick_checks"
harness = false
