[package]
name = "dsiem-ui"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
http-auth-basic = "0.3.3"
reqwasm = "0.5.0"
serde = "1.0.152"
serde_json = "1.0.91"
url = "2.5.0"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlSelectElement", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"
