[package]
name = "filter-comparison"
edition = "2021"

version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[[bin]]
path = "src/main.rs"
name = "filter-comparison"

[dependencies]
anyhow = "1.0"
axum = "0.7.4"
dsiem = { path = "../../server/" }
rayon = "1.9.0"
tokio = "1.36.0"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
